--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
   "dependencies": {
     "express": "4.17.1",
     "vue": "2.6.12"
+  },
+  "devDependencies": {
+    "webpack": "5.11.1",
+    "webpack-cli": "4.3.1",
+    "webpack-dev-middleware": "4.0.2",
+    "webpack-hot-middleware": "2.25.0"
   }
 }
