--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "vue": "2.6.12"
   },
   "devDependencies": {
+    "eslint": "7.17.0",
+    "eslint-config-standard": "16.0.2",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-html": "6.1.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "5.0.0",
     "webpack": "5.11.1",
     "webpack-cli": "4.3.1",
     "webpack-dev-middleware": "4.0.2",
