--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "5.0.0",
+    "vue-loader": "15.9.6",
+    "vue-template-compiler": "2.6.12",
     "webpack": "5.11.1",
     "webpack-cli": "4.3.1",
     "webpack-dev-middleware": "4.0.2",
