--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "vue": "2.6.12"
   },
   "devDependencies": {
+    "@babel/core": "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.2",
     "eslint": "7.17.0",
     "eslint-config-standard": "16.0.2",
     "eslint-loader": "4.0.2",
