--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bulma": "0.9.1",
     "express": "4.17.1",
     "vue": "2.6.12"
   },
@@ -19,6 +20,8 @@
     "@babel/preset-env": "7.12.11",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
+    "clean-webpack-plugin": "3.0.0",
+    "css-loader": "5.0.1",
     "eslint": "7.17.0",
     "eslint-config-standard": "16.0.2",
     "eslint-loader": "4.0.2",
@@ -27,6 +30,12 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "5.0.0",
+    "html-webpack-plugin": "4.5.1",
+    "mini-css-extract-plugin": "1.3.3",
+    "node-sass": "5.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "sass-loader": "10.1.0",
+    "terser-webpack-plugin": "5.0.3",
     "vue-loader": "15.9.6",
     "vue-template-compiler": "2.6.12",
     "webpack": "5.11.1",
