--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "webpack --config ./build/webpack.base.config.js",
+    "prestart": "webpack --config ./build/webpack.base.config.js --mode=production",
     "start": "node server.js",
-    "dev": "set NODE_ENV=development&& node server.js development"
+    "dev-webpack": "webpack --config ./build/webpack.base.config.js --watch --mode=development",
+    "dev": "set NODE_ENV=development&& nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,8 @@
   "dependencies": {
     "bulma": "0.9.1",
     "express": "4.17.1",
-    "vue": "2.6.12"
+    "vue": "2.6.12",
+    "vue-router": "3.4.9"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
@@ -35,6 +37,7 @@
     "html-webpack-plugin": "4.5.1",
     "mini-css-extract-plugin": "1.3.3",
     "node-sass": "5.0.0",
+    "nodemon": "2.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "sass-loader": "10.1.0",
     "terser-webpack-plugin": "5.0.3",
