--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.21.1",
     "bulma": "0.9.1",
     "express": "4.17.1",
     "vue": "2.6.12",
@@ -21,7 +22,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
+    "@babel/plugin-transform-runtime": "7.12.10",
     "@babel/preset-env": "7.12.11",
+    "@babel/runtime": "7.12.5",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
