--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bulma": "0.9.1",
     "express": "4.17.1",
     "vue": "2.6.12",
-    "vue-router": "3.4.9"
+    "vue-router": "3.4.9",
+    "vuex": "3.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
