--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "4.17.1",
     "vue": "2.6.12",
     "vue-router": "3.4.9",
+    "vue-server-renderer": "2.6.12",
     "vuex": "3.6.0"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "5.0.0",
     "html-webpack-plugin": "4.5.1",
+    "ignore-loader": "0.1.2",
     "mini-css-extract-plugin": "1.3.3",
     "node-sass": "5.0.0",
     "nodemon": "2.0.7",
@@ -51,6 +53,7 @@
     "webpack": "5.11.1",
     "webpack-cli": "4.3.1",
     "webpack-dev-middleware": "4.0.2",
-    "webpack-hot-middleware": "2.25.0"
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-node-externals": "2.5.2"
   }
 }
