--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-standard": "5.0.0",
     "ignore-loader": "0.1.2",
     "jest": "26.6.3",
+    "jest-serializer-vue": "2.0.2",
     "mini-css-extract-plugin": "1.3.3",
     "node-sass": "5.0.0",
     "nodemon": "2.0.7",
@@ -73,6 +74,9 @@
     },
     "moduleNameMapper": {
       "^@_/(.*)$": "<rootDir>/src/$1"
-    }
+    },
+    "snapshotSerializers": [
+      "jest-serializer-vue"
+    ]
   }
 }
