configuring ci test with --ci and --updateSnapshot

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "server.js",
   "scripts": {
     "test-watch": "jest --watchAll",
-    "test": "jest --coverage",
+    "test": "jest --coverage --ci --updateSnapshot",
     "prestart": "webpack --config ./build/webpack.base.config.js --mode=production",
     "start": "node server.js",
     "dev-webpack": "webpack --config ./build/webpack.base.config.js --watch --mode=development",
